<resources>
    <string name="app_name">SMS2XMPP</string>

    <!-- Strings related to login -->
    <string name="cust_host">Custom Host</string>
    <string name="prompt_jid">Jabber Id</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_server">Server</string>
    <string name="prompt_port">Port Number</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_jid">This Jid  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_big_port">This port is too big !</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ticker_text">Notif Xmpp Lho</string>
    <string name="re_tap_text">Press Back Again to Exit</string>

    <!--header menu-->
    <string name="dev_mail">madidarma1@gmail.com</string>
    <string name="dev_web_page">www.facebook.com/neobyte21</string>
    <string name="dev_phone">+6289601673292</string>

    <!--menu strings-->
    <string name="nav_home">Home</string>
    <string name="nav_edit_server">Edit Server</string>
    <string name="nav_edit_text">Edit Code</string>
    <string name="nav_edit_phone">Edit Number</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_logout">Log Out</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="default_filter">입금</string>
    <string name="default_filter2">원</string>
    <string name="default_code">KR</string>
    <string name="default_server">asneiya31@xmpp.jp</string>
    <string name="default_number">62899010123</string>

    <string name="add_server">Server Name</string>
    </resources>
