<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_server"
            android:icon="@drawable/ic_nav_server"
            android:title="@string/nav_edit_server" />
        <item
            android:id="@+id/nav_text"
            android:icon="@drawable/ic_nav_text"
            android:title="@string/nav_edit_text" />
        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_nav_text"
            android:title="@string/nav_edit_phone" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>